@@ -1,11 +1,11 @@
 dnl
 dnl Configuring Gauche-dbd-mysql
 dnl  process this file with autoconf to generate 'configure'.
-dnl $Id: configure.in,v 1.6 2007/02/21 02:44:51 bizenn Exp $
+dnl $Id: configure.in,v 1.7 2007/02/23 08:45:39 bizenn Exp $
 dnl
 
 AC_PREREQ(2.59)
-AC_INIT(Gauche-dbd-mysql, 0.3_pre1, info@kahua.org)
+AC_INIT(Gauche-dbd-mysql, 0.3_pre2, info@kahua.org)
 dnl If you want to use the system name (OS, architecture, etc) in the
 dnl configure, uncomment the following line.  In such a case, you need
 dnl to copy config.guess and config.sub from automake distribution.
