@@ -1,3 +1,9 @@
+2007-02-23  Tatsuya BIZENN  <bizenn@arthub.net>
+
+	* Change: dbd/mysql.scm
+	  Rewrite with native prepared statement API.
+	  Working in progress.
+
 2007-02-21  Tatsuya BIZENN  <bizenn@arthub.net>
 
 	* Change: dbd_mysql.c, dbd_mysql.h, dbd_mysqllib.stub
